--- a/foundations/ku/index.pug
+++ b/foundations/ku/index.pug
@@ -119,7 +119,7 @@ block content
                         \prod_{X : \mathbf{U_{(0,0)}}} \prod_{G : \mathbf{U_{(0,0)}}}
                         \prod_{\tau : \prod_{x : X} \mathbf{U_{(0,0)}}}
                         \mathbf{KU^\tau_G}(X, G, \tau) =_{\mathbf{U_{(0,0)}}}
-                        \mathbf{KU^\tau_G}(\mathbf{Susp}\ X, G, \tau).
+                        \mathbf{KU^\tau_G}(\mathbf{\Sigma}\ X, G, \tau).
                     $$
                 +code.
                     def stability-under-susp (X : Type) (G : Group) (τ : X → BPU)
