--- a/foundations/ku/index.pug
+++ b/foundations/ku/index.pug
@@ -122,7 +122,7 @@ block content
                         \mathbf{KU^\tau_G}(\mathbf{\Sigma}\ X, G, \tau).
                     $$
                 +code.
-                    def stability-under-susp (X : Type) (G : Group) (τ : X → BPU)
+                    def stability (X : Type) (G : Group) (τ : X → BPU)
                       : Path Spectra (KU_G^τ(X; G; τ)) (KU_G^τ(susp X; G; τ)))
                      := refl Spectra (KU_G^τ(X; G; τ))
 
