--- a/foundations/spectra/index.pug
+++ b/foundations/spectra/index.pug
@@ -16,7 +16,7 @@ block content
     article.main
         .exe
             section
-                h1 SPECTRA TYPE
+                h1 STABLE SPECTRA
                 span.
         aside
             time Published: 13 APR 2025
