--- a/foundations/em/index.pug
+++ b/foundations/em/index.pug
@@ -16,7 +16,7 @@ block content
   article.main
     .exe
       section
-        h1 Eilenberg-MacLane Spaces
+        h1 COHOMOLOGY
         span.
     aside
       time Published: 10 MAY 2025
